--- a/Source/Solace Core/Solace.Tests.Manual/Solace.Tests.Manual.csproj
+++ b/Source/Solace Core/Solace.Tests.Manual/Solace.Tests.Manual.csproj
@@ -7,6 +7,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <LangVersion>preview</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
