--- a/Solace Source/Solace Modules/Solace Postgres Module/Solace.Modules.Postgres/Solace.Modules.Postgres.csproj
+++ b/Solace Source/Solace Modules/Solace Postgres Module/Solace.Modules.Postgres/Solace.Modules.Postgres.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\..\..\Solace Core\Solace.Core\Solace.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
