module projects conform to AssemblyLoadContext quirk

--- a/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Core/Solace.Modules.Discord.Core.csproj
+++ b/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Core/Solace.Modules.Discord.Core.csproj
@@ -2,6 +2,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Solace Core\Solace.Core\Solace.Core.csproj" />
+    <Private>false</Private>
+    <ExcludeAssets>runtime</ExcludeAssets>
   </ItemGroup>
 
   <PropertyGroup>
