--- a/Solace Source/Solace Core/Solace.Core/Solace.Core.csproj
+++ b/Solace Source/Solace Core/Solace.Core/Solace.Core.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
     <PackageReference Include="Serilog" Version="2.9.0" />
   </ItemGroup>
 
