--- a/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Core/Solace.Modules.Discord.Core.csproj
+++ b/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Core/Solace.Modules.Discord.Core.csproj
@@ -1,9 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Solace Core\Solace.Core\Solace.Core.csproj" />
-    <Private>false</Private>
-    <ExcludeAssets>runtime</ExcludeAssets>
+    <ProjectReference Include="..\..\..\Solace Core\Solace.Core\Solace.Core.csproj">
+      <Private>false</Private>
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </ProjectReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.1" />
   </ItemGroup>
 
   <PropertyGroup>
