--- a/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Tests/Solace.Modules.Discord.Tests.csproj
+++ b/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Tests/Solace.Modules.Discord.Tests.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Solace.Modules.Discord.Core\Solace.Modules.Discord.Core.csproj" />
+    <ProjectReference Include="..\Solace.Modules.Discord.Provider.DSharpPlus\Solace.Modules.Discord.Provider.DSharpPlus.csproj" />
   </ItemGroup>
 
 </Project>
