--- a/Solace Source/Solace Core/Solace.Server/Solace.Server.csproj
+++ b/Solace Source/Solace Core/Solace.Server/Solace.Server.csproj
@@ -9,6 +9,7 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
 </Project>
