--- a/Solace Source/Solace Core/Solace.Tests/Solace.Tests.csproj
+++ b/Solace Source/Solace Core/Solace.Tests/Solace.Tests.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
+    <PlatformTarget>x64</PlatformTarget>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
