--- a/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Core/Solace.Modules.Discord.Core.csproj
+++ b/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Core/Solace.Modules.Discord.Core.csproj
@@ -17,6 +17,7 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
 </Project>
