--- a/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Tests/Solace.Modules.Discord.Tests.csproj
+++ b/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Tests/Solace.Modules.Discord.Tests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
+    <PlatformTarget>x64</PlatformTarget>
+    
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
