--- a/Solace Source/Solace Core/Solace.Server/Solace.Server.csproj
+++ b/Solace Source/Solace Core/Solace.Server/Solace.Server.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Solace.Core\Solace.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
