--- a/Solace Source/Solace Core/Solace.Server/Solace.Server.csproj
+++ b/Solace Source/Solace Core/Solace.Server/Solace.Server.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
   </ItemGroup>
 
