--- a/Solace Source/Solace Core/Solace.Core/Solace.Core.csproj
+++ b/Solace Source/Solace Core/Solace.Core/Solace.Core.csproj
@@ -8,4 +8,8 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
