copy depends to bin

--- a/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Provider.DSharpPlus/Solace.Modules.Discord.Provider.DSharpPlus.csproj
+++ b/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Provider.DSharpPlus/Solace.Modules.Discord.Provider.DSharpPlus.csproj
@@ -21,6 +21,7 @@
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <PlatformTarget>x64</PlatformTarget>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
 </Project>
