--- a/Solace Source/Solace Core/Solace.Core/Solace.Core.csproj
+++ b/Solace Source/Solace Core/Solace.Core/Solace.Core.csproj
@@ -6,10 +6,6 @@
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <PlatformTarget>x64</PlatformTarget>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
-
 </Project>
