--- a/Solace Source/Solace Core/Solace.Server/Solace.Server.csproj
+++ b/Solace Source/Solace Core/Solace.Server/Solace.Server.csproj
@@ -1,7 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Solace.Core\Solace.Core.csproj" />
+    <ProjectReference Include="..\Solace.Core\Solace.Core.csproj">
+      <Private>false</Private>
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </ProjectReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -15,6 +18,7 @@
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <PlatformTarget>x64</PlatformTarget>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
 </Project>
