--- a/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Core/Solace.Modules.Discord.Core.csproj
+++ b/Solace Source/Solace Modules/Solace Discord Module/Solace.Modules.Discord.Core/Solace.Modules.Discord.Core.csproj
@@ -18,6 +18,7 @@
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <PlatformTarget>x64</PlatformTarget>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
 </Project>
