--- a/Source/Core/Caesura.Solace.Database/Caesura.Solace.Database.csproj
+++ b/Source/Core/Caesura.Solace.Database/Caesura.Solace.Database.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Caesura.Solace.Entities\Caesura.Solace.Entities.csproj" />
+    <ProjectReference Include="..\Caesura.Solace.Foundation\Caesura.Solace.Foundation.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
@@ -9,6 +10,5 @@
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-
+  
 </Project>
