--- a/Source/Core/Caesura.Solace.Foundation/Directory.Build.props
+++ b/Source/Core/Caesura.Solace.Foundation/Directory.Build.props
@@ -1,6 +1,7 @@
 
 <Project>
   <PropertyGroup>
-    <BaseIntermediateOutputPath>..\..\.tmp\build\$(MSBuildProjectName)\obj</BaseIntermediateOutputPath>
+    <BaseIntermediateOutputPath>..\..\..\.temp\build\$(MSBuildProjectName)\obj</BaseIntermediateOutputPath>
+    <BaseOutputPath>..\..\..\.temp\build\$(MSBuildProjectName)\bin</BaseOutputPath>
   </PropertyGroup>
 </Project>
