--- a/Source/Core/Caesura.Solace.Entities/Caesura.Solace.Entities.csproj
+++ b/Source/Core/Caesura.Solace.Entities/Caesura.Solace.Entities.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+  
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+  
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp5.0</TargetFramework>
