--- a/Source/Core/Caesura.Solace.Entities/Caesura.Solace.Entities.csproj
+++ b/Source/Core/Caesura.Solace.Entities/Caesura.Solace.Entities.csproj
@@ -4,6 +4,10 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
   
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-preview.3.20181.2" />
+  </ItemGroup>
+  
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp5.0</TargetFramework>
