--- a/Source/Core/Caesura.Solace.Manager/Caesura.Solace.Manager.csproj
+++ b/Source/Core/Caesura.Solace.Manager/Caesura.Solace.Manager.csproj
@@ -4,7 +4,11 @@
     <ProjectReference Include="..\Caesura.Solace.Entities\Caesura.Solace.Entities.csproj" />
     <ProjectReference Include="..\Caesura.Solace.Foundation\Caesura.Solace.Foundation.csproj" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0-preview.3.20181.2" />
+  </ItemGroup>
+  
   <PropertyGroup>
     <TargetFramework>netcoreapp5.0</TargetFramework>
     <LangVersion>preview</LangVersion>
