--- a/Source/Core/Caesura.Solace.Entities/Caesura.Solace.Entities.csproj
+++ b/Source/Core/Caesura.Solace.Entities/Caesura.Solace.Entities.csproj
@@ -6,6 +6,7 @@
   
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-preview.3.20181.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0-preview.3.20181.2" />
   </ItemGroup>
   
   <PropertyGroup>
