configurable get limit

--- a/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
+++ b/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
@@ -8,6 +8,7 @@
   },
   "LogService": {
     "DatabasePath": "./system_log.db",
-    "ConnectionString": "Data Source={DatabasePath}"
+    "ConnectionString": "Data Source={DatabasePath}",
+    "GetLimit": 100
   }
 }
