--- a/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
+++ b/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "LogService": {
+  "Data": {
     "DatabasePath": "./system_log.db",
     "ConnectionString": "Data Source={DatabasePath}",
     "GetLimit": 100
