--- a/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
+++ b/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
@@ -6,9 +6,19 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Data": {
-    "DatabasePath": "./system_log.db",
-    "ConnectionString": "Data Source={DatabasePath}",
+  "Storage": {
+    "Log": {
+      "Path": "./system_log.db",
+      "ConnectionString": "Data Source={Path}"
+    }
+  },
+  "Networking":
+  {
     "GetLimit": 100
+  },
+  "Service": {
+    "Core.Database": {
+      "Connection": "https://localhost:4989"
+    }
   }
 }
