working on controlling and contacting other services

--- a/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
+++ b/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
@@ -16,9 +16,18 @@
   {
     "GetLimit": 100
   },
-  "Service": {
+  "HttpClients": {
     "Core.Database": {
-      "Connection": "https://localhost:4989"
+        "Connection": "https://localhost:4989/"
+    }
+  },
+  "Services": {
+    "Items": {
+      "Core.Database": {
+        "ExecPath": "./../../../.temp/build/Caesura.Solace.Database/bin/Debug/netcoreapp5.0/Caesura.Solace.Database.exe",
+        "Connection": "https://localhost:4989/",
+        "Local": true
+      }
     }
   }
 }
