more work on starting services

--- a/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
+++ b/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
@@ -16,17 +16,14 @@
   {
     "GetLimit": 100
   },
-  "HttpClients": {
-    "Core.Database": {
-        "Connection": "https://localhost:4989/"
-    }
-  },
   "Services": {
     "Items": {
       "Core.Database": {
         "ExecPath": "./../../../.temp/build/Caesura.Solace.Database/bin/Debug/netcoreapp5.0/Caesura.Solace.Database.exe",
         "Connection": "https://localhost:4989/",
-        "Local": true
+        "TimeoutMs": 3000,
+        "Local": true,
+        "Autostart": false
       }
     }
   }
