continued work on service control

--- a/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
+++ b/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
@@ -23,7 +23,8 @@
         "Connection": "https://localhost:4989/",
         "TimeoutMs": 3000,
         "Local": true,
-        "Autostart": false
+        "Autostart": false,
+        "CreateWindow": true
       }
     }
   }
