--- a/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
+++ b/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
@@ -24,6 +24,7 @@
         "TimeoutMs": 3000,
         "Local": true,
         "Autostart": false,
+        "Autoclose": false,
         "CreateWindow": true
       }
     }
