shutdown POST request

--- a/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
+++ b/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
@@ -16,6 +16,10 @@
   {
     "GetLimit": 100
   },
+  "Proc": {
+    "AllowShutdown": true,
+    "ShutdownDelay": 3000
+  },
   "Services": {
     "Items": {
       "Core.Database": {
