make all config access strongly-typed with no strings

--- a/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
+++ b/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
@@ -16,11 +16,12 @@
   {
     "GetLimit": 100
   },
-  "Proc": {
+  "Process": {
     "AllowShutdown": true,
-    "ShutdownDelay": 3000
+    "ShutdownDelayMs": 3000
   },
   "Services": {
+    "ReconnectDelayMs": 5000,
     "Items": {
       "Core.Database": {
         "ExecPath": "./../../../.temp/build/Caesura.Solace.Database/bin/Debug/netcoreapp5.0/Caesura.Solace.Database.exe",
