--- a/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
+++ b/Source/Core/Caesura.Solace.Manager/appsettings.Development.json
@@ -18,13 +18,8 @@
     "ReconnectDelayMs": 5000,
     "Items": {
       "Core.Database": {
-        "ExecPath": "./../../../.temp/build/Caesura.Solace.Database/bin/Debug/netcoreapp5.0/Caesura.Solace.Database.exe",
         "Connection": "https://localhost:4989/",
-        "TimeoutMs": 3000,
-        "Local": true,
-        "Autostart": false,
-        "Autoclose": false,
-        "CreateWindow": true
+        "TimeoutMs": 3000
       }
     }
   },
