--- a/Source/Core/Caesura.Solace.Database/Caesura.Solace.Database.csproj
+++ b/Source/Core/Caesura.Solace.Database/Caesura.Solace.Database.csproj
@@ -6,6 +6,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0-preview.3.20215.14" />
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0-preview.3.20181.2" />
   </ItemGroup>
 
