--- a/Source/Consumers/Discord/Caesura.Solace.Discord.Endpoint/Caesura.Solace.Discord.Endpoint.csproj
+++ b/Source/Consumers/Discord/Caesura.Solace.Discord.Endpoint/Caesura.Solace.Discord.Endpoint.csproj
@@ -5,6 +5,12 @@
     <ProjectReference Include="..\..\..\Core\Caesura.Solace.Foundation\Caesura.Solace.Foundation.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0-preview.3.20215.14" />
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.4.0" />
+    <PackageReference Include="Discord.Net" Version="2.2.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp5.0</TargetFramework>
   </PropertyGroup>
