setting up discord endpoint

--- a/Source/Consumers/Discord/Caesura.Solace.Discord.Endpoint/appsettings.Development.json
+++ b/Source/Consumers/Discord/Caesura.Solace.Discord.Endpoint/appsettings.Development.json
@@ -5,5 +5,26 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Networking":
+  {
+    "GetLimit": 100
+  },
+  "Process": {
+    "AllowShutdown": true,
+    "ShutdownDelayMs": 3000
+  },
+  "Services": {
+    "ReconnectDelayMs": 5000,
+    "Items": {
+      "Core.Manager": {
+        "Connection": "https://localhost:4988/",
+        "TimeoutMs": 3000
+      },
+      "Core.Database": {
+        "Connection": "https://localhost:4989/",
+        "TimeoutMs": 3000
+      }
+    }
   }
 }
