--- a/Source/Consumers/Discord/Caesura.Solace.Discord.Commands/Caesura.Solace.Discord.Commands.csproj
+++ b/Source/Consumers/Discord/Caesura.Solace.Discord.Commands/Caesura.Solace.Discord.Commands.csproj
@@ -12,6 +12,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp5.0</TargetFramework>
+    <LangVersion>preview</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 
