--- a/Source/Consumers/Discord/Caesura.Solace.Discord.Endpoint/Caesura.Solace.Discord.Endpoint.csproj
+++ b/Source/Consumers/Discord/Caesura.Solace.Discord.Endpoint/Caesura.Solace.Discord.Endpoint.csproj
@@ -13,6 +13,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp5.0</TargetFramework>
+    <LangVersion>preview</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 
